# file_sharing_microservice

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  files_model.py  main.py  mongo_database.py  pyproject.toml  router.py
nginx/: nginx.conf
src/: config.py  main.py  minio_storage.py  mongo_database.py
src/file_sharing/: api_responses.py  config.py  files_model.py  main.py  minio_storage.py  mongo_database.py  mongo_models.py  router.py  security_utils.py  service.py  tasks.py
src/file_sharing/dependencies/: depends.py
src/file_sharing/models/: file.py  security.py
src/file_sharing/routers/: router.py
src/file_sharing/services/: base_service.py  minio_service.py
src/file_sharing/tests/: conftest.py
src/file_sharing/tests/test_routes/: test_upload_route.py
